# pdf-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
assets/: demo-video.webm
src/db/: __init__.py
src/db/models/: Document.py  Session.py
src/pdf_chatbot/: app.py  constants.py  models.py  utils.py
static/: styles.css
templates/: index.html
tests/: test_rate_limits.py  test_routes.py
